# ai-detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  script.py
configs/: Llama-3.2-1B-Instruct.yaml  Phi-3.5-mini-instruct.yaml  Qwen2.5-1.5B-Instruct.yaml  SmolLM2-1.7B-Instruct.yaml  SmolLM2-360M-Instruct.yaml  gemma-2-2b-it.yaml
prompts/: complete_articles.json
src/: data.py  embed.py  generate.py  intrinsic_dim.py  mle.py  ngram.py  pca.py  phd.py  pretrained.py
src/dataset/: generate.py  push_hf.py
src/utils/: utils.py
